# mCUDA

./: CMakeLists.txt  Matmul.cpp  Matmul.h  Tensor.h  a.out  add.cpp  add.cu  kernel.cu  kernel.cuh  main.cpp  main.cu  main2.cpp  matmul.cpp  matmul.h  note.txt  pch.h  test.cu
first_iteration/: add.cu  main.cpp  test.cu
second_iteration/: main.cpp  main2.cpp  test.cpp
